# __2027_07_03__

./: Untitled.ipynb  main.py  pratice_01.ipynb  pyproject.toml
backend/: 0709.ipynb  0717.ipynb  0717_pydantic.ipynb  Untitled.ipynb  pydantic.ipynb
backend/0720/: 0720_requests.ipynb  pratice2.py  pratice3.ipynb  pratice4.py
backend/0721/: pratice1.py  pratice2.py  pratice3.py  pratice4.py  pyproject.toml
backend/0724/: pratice1.py  pratice2.py  pratice3.py
backend/iris-predict-service/: app.py  iris_model.joblib
frontend/: package-lock.json
frontend/src/: App.tsx  index.css
